jira/k8s-app/jira-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jira-svc
  sessionAffinity: None
  type: ClusterIP
