jira/k8s-app/jira-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jira-ingress
  annotations:
    kubernetes.io/ingress.class: gitlab-nginx
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '15'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/service-weight: ''
    service.beta.kubernetes.io/alicloud-loadbalancer-id: xxx
spec:
  tls:
  - hosts:
    - jira.xxx.com.cn
    secretName: xxx.com
  rules:
  - host: jira.xxx.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jira-svc
          servicePort: 8080
